--- a/api.html
+++ b/api.html
@@ -23,6 +23,8 @@
             padding: 10px;
             width: 100%;
             max-width: 600px;
+            height: 50vh; /* Set fixed height to 50% of the viewport height */
+            overflow-y: auto; /* Enable vertical scrolling */
             text-align: left;
         }
     </style>
