--- a/api.html
+++ b/api.html
@@ -4,30 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch and Display Data</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 20px;
-        }
-        #message {
-            margin-top: 20px;
-            font-size: 20px;
-            color: green;
-        }
-        #data {
-            margin-top: 20px;
-            border: 1px solid #ddd;
-            padding: 10px;
-            width: 100%;
-            max-width: 600px;
-            height: 50vh; /* Set fixed height to 50% of the viewport height */
-            overflow-y: auto; /* Enable vertical scrolling */
-            text-align: left;
-        }
-    </style>
+    <meta rel="stylesheet" href="styles.css">
 </head>
 <body>
     <button id="fetch-button">Fetch Event Data</button>
