--- a/api.html
+++ b/api.html
@@ -7,6 +7,10 @@
     <meta rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
+        <h1></h1>
+        <img/>
+    </div>
     <button id="fetch-button">Fetch Event Data</button>
     <p id="message"></p>
     <div id="data"></div>
