--- a/api.html
+++ b/api.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div>
-        <h1></h1>
+        <h1>Current</h1>
+        <p>See what's happening near you!</p>
+    </div>
+    <div>
+        <h1>What's on in...</h1>
         <img/>
     </div>
     <button id="fetch-button">Fetch Event Data</button>
