--- a/api.html
+++ b/api.html
@@ -12,6 +12,16 @@
         <p>See what's happening near you!</p>
     </div>
     <div>
+        <img/>
+        <div>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Settings</li>
+            </ul>
+        </div>
+    </div>
+    <div>
         <h1>What's on in...</h1>
         <img/>
     </div>
