--- a/api.html
+++ b/api.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Current</h1>
+        <h1>Current!</h1>
         <p>See what's happening near you!</p>
     </div>
     <div>
@@ -23,6 +23,9 @@
     </div>
     <div>
         <h1>What's on in...</h1>
+        <div>
+            <input/>
+        </div>
         <img/>
     </div>
     <button id="fetch-button">Fetch Event Data</button>
