--- a/api.html
+++ b/api.html
@@ -25,6 +25,7 @@
         <h1>What's on in...</h1>
         <div>
             <input/>
+            <button>Go!</button>
         </div>
         <img/>
     </div>
