--- a/api.html
+++ b/api.html
@@ -14,12 +14,13 @@
     </div>
     <div>
         <img/>
-        <div>
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Settings</li>
-            </ul>
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="#link1">Link 1</a>
+                <a href="#link2">Link 2</a>
+                <a href="#link3">Link 3</a>
+            </div>
         </div>
     </div>
     <div>
