--- a/api.html
+++ b/api.html
@@ -38,5 +38,6 @@
     <!-- Link to the external JavaScript file -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
+    <script src="function.js"></script>
 </body>
 </html>
