--- a/api.html
+++ b/api.html
@@ -12,6 +12,13 @@
         <h1>Current!</h1>
         <p>See what's happening near you!</p>
     </div>
+    <div class="banner">
+        <div class="slides">
+            <img src="image1.jpg" alt="Image 1">
+            <img src="image2.jpg" alt="Image 2">
+            <img src="image3.jpg" alt="Image 3">
+        </div>
+    </div>
     <div>
         <img/>
         <div class="dropdown">
