edit search bar

--- a/api.html
+++ b/api.html
@@ -32,9 +32,9 @@
     </div>
     <div>
         <h1>What's on in...</h1>
-        <div>
-            <input/>
-            <button>Go!</button>
+        <div class="search-bar">
+            <input type="text" placeholder="Enter city or event" id="searchInput"/>
+            <button id="searchButton">Go!</button>
         </div>
         <img/>
     </div>
