--- a/api.html
+++ b/api.html
@@ -7,6 +7,9 @@
     <meta rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button class="icon-button">
+        <span class="icon">+</span>
+    </button>
     <div>
         <img/>
         <h1>Current!</h1>
