--- a/api.html
+++ b/api.html
@@ -7,9 +7,15 @@
     <meta rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="scrolling-header">
+        <div class="scrolling-text">This is the first line of scrolling text.</div>
+        <div class="scrolling-text">Here comes the second line of scrolling text.</div>
+        <div class="scrolling-text">Finally, the third line of scrolling text.</div>
+    </header>
     <button class="icon-button">
         <span class="icon">+</span>
     </button>
+
     <div>
         <img/>
         <h1>Current!</h1>
