--- a/api.html
+++ b/api.html
@@ -28,6 +28,35 @@
             <img src="image3.jpg" alt="Image 3">
         </div>
     </div>
+
+    <div class="scrollable-bar">
+        <button class="tab-button active" data-target="section1">Page 1</button>
+        <button class="tab-button" data-target="section2">Page 2</button>
+        <button class="tab-button" data-target="section3">Page 3</button>
+        <button class="tab-button" data-target="section4">Page 4</button>
+        <!-- Add more buttons as needed -->
+    </div>
+
+    <div class="content-container">
+        <div id="section1" class="content-section active">
+            <h2>Content for Page 1</h2>
+            <p>This is the content for the first page.</p>
+        </div>
+        <div id="section2" class="content-section">
+            <h2>Content for Page 2</h2>
+            <p>This is the content for the second page.</p>
+        </div>
+        <div id="section3" class="content-section">
+            <h2>Content for Page 3</h2>
+            <p>This is the content for the third page.</p>
+        </div>
+        <div id="section4" class="content-section">
+            <h2>Content for Page 4</h2>
+            <p>This is the content for the fourth page.</p>
+        </div>
+        <!-- Add more sections as needed -->
+    </div>
+
     <div>
         <img/>
         <div class="dropdown">
