--- a/api.html
+++ b/api.html
@@ -37,6 +37,19 @@
         <!-- Add more buttons as needed -->
     </div>
 
+
+    <div class="picture-grid">
+        <img src="image1.jpg" alt="Image 1">
+        <img src="image2.jpg" alt="Image 2">
+        <img src="image3.jpg" alt="Image 3">
+        <img src="image4.jpg" alt="Image 4">
+        <img src="image5.jpg" alt="Image 5">
+        <img src="image6.jpg" alt="Image 6">
+        <img src="image7.jpg" alt="Image 7">
+        <img src="image8.jpg" alt="Image 8">
+        <img src="image9.jpg" alt="Image 9">
+    </div>
+
     <div class="content-container">
         <div id="section1" class="content-section active">
             <h2>Content for Page 1</h2>
