--- a/api.html
+++ b/api.html
@@ -29,6 +29,26 @@
         </div>
     </div>
 
+
+    <div class="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="image1.jpg" alt="Image 1">
+            </div>
+            <div class="carousel-item">
+                <img src="image2.jpg" alt="Image 2">
+            </div>
+            <div class="carousel-item">
+                <img src="image3.jpg" alt="Image 3">
+            </div>
+            <!-- Add more carousel items as needed -->
+        </div>
+        <!-- Navigation controls -->
+        <a class="prev" onclick="moveSlide(-1)">&#10094;</a>
+        <a class="next" onclick="moveSlide(1)">&#10095;</a>
+    </div>
+    
+
     <div class="scrollable-bar">
         <button class="tab-button active" data-target="section1">Page 1</button>
         <button class="tab-button" data-target="section2">Page 2</button>
