--- a/api.html
+++ b/api.html
@@ -113,6 +113,32 @@
     <p id="message"></p>
     <div id="data"></div>
 
+
+    <div class="faq-section">
+        <div class="faq-item">
+            <div class="faq-question">What is your return policy?</div>
+            <div class="faq-answer">We offer a 30-day return policy. You can return items within 30 days of purchase for a full refund.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">How do I track my order?</div>
+            <div class="faq-answer">You can track your order using the tracking number provided in the confirmation email.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">Do you ship internationally?</div>
+            <div class="faq-answer">Yes, we ship to most countries around the world. Shipping charges and delivery times vary by location.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">What payment methods do you accept?</div>
+            <div class="faq-answer">We accept Visa, MasterCard, American Express, PayPal, and other major credit and debit cards.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">Can I change my shipping address?</div>
+            <div class="faq-answer">Yes, you can change your shipping address before your order is shipped. Contact our support team for assistance.</div>
+        </div>
+    </div>
+
+    
+
     <!-- Link to the external JavaScript file -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
