--- a/api.html
+++ b/api.html
@@ -30,6 +30,14 @@
     </div>
 
 
+    <div class="parallax-container">
+        <div class="parallax-background"></div>
+        <div class="parallax-text">
+            <h1>Your Text Here</h1>
+        </div>
+    </div>
+
+
     <div class="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
