--- a/api.html
+++ b/api.html
@@ -12,6 +12,15 @@
         <div class="scrolling-text">Here comes the second line of scrolling text.</div>
         <div class="scrolling-text">Finally, the third line of scrolling text.</div>
     </header>
+
+    <div>
+        <h1>Social Media App</h1>
+        <nav>
+            <a href="#" onclick="showProfile()">Profile</a>
+            <a href="#" onclick="showSettings()">Settings</a>
+        </nav>
+    </div>
+
     <button class="icon-button">
         <span class="icon">+</span>
     </button>
