--- a/api.html
+++ b/api.html
@@ -14,11 +14,13 @@
     </header>
 
     <div>
-        <h1>Social Media App</h1>
-        <nav>
-            <a href="#" onclick="showProfile()">Profile</a>
-            <a href="#" onclick="showSettings()">Settings</a>
-        </nav>
+        <div id="app">
+            <h1>Social Media App</h1>
+            <nav>
+                <a href="#" onclick="showProfile()">Profile</a>
+                <a href="#" onclick="showSettings()">Settings</a>
+            </nav>
+        </div>
     </div>
 
     <button class="icon-button">
